Updated Header, Added double line spacing and added bug fix / feature request

--- a/Referencing_Generator.css
+++ b/Referencing_Generator.css
@@ -1,28 +1,18 @@
 * {box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
 body {
     background-color: white;
-    margin: 0px;
+    margin-bottom: 50px;
+    margin: 0;
     margin-bottom: 50px;
 }
 
-.bigheader {
-    width: 100%;
-    height: 70px;
-    background-color: rgb(51, 71, 255);
-    border-bottom: 2px solid gray;
-    text-align: center;
-    color: white;
-    line-height: 70px;
-    margin: 0;
-}
-
-.bigheader > h1 {
-    margin: 0;
-}
-
 header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: sticky;
     top: 0;
     bottom: 0;
@@ -34,16 +24,23 @@ header {
     border-bottom: 1px solid gray;
 }
 
-/* .name {
-    display: inline-block;
-    width: 150px;
+.logo > img {
     height: 49px;
-    margin: 0px;
+    margin: 0;
+}
 
+.logo {
+    display: flex;
+    font-size: 10px;
+    width: 400px;
+    color: #424242;
+    font-size:20px;
+    font-weight:300;
+    align-items: center;
+    text-align: center;
 }
 
 .name > a {
-    display: inline-block;
     text-align: center;
     text-decoration: none;
     width: 150px;
@@ -57,23 +54,22 @@ header {
 .name > a:hover {
     background-color: lightblue;
     text-decoration: underline;
-} */
+}
 .header-content {
-    position: absolute;
-    transform: translateX(-50%);
-    width: 460px;
+    width: 800px;
     height: 50px;
-    left: 50%;
-    right: 50%;
-    bottom: 0px;
-    top: 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
 }
     
 header > .header-content > .header-button {
     display: inline-block;
     width: 150px;
     height: 49px;
-    font-size: 15px;
+    font-weight: 300;
+    font-size: 17px;
     vertical-align: middle;
     text-align: center;
     color: #424242;
@@ -90,16 +86,6 @@ header > .header-content > .header-button > span {
 }
 header > .header-content > .header-button:hover {
     background-color: lightblue;
-    text-decoration: underline;
-}
-header > .header-content > .header-button:hover > span {
-    text-decoration: underline;
-}
-
-.logo {
-    color: #424242;
-    font-size:22px;
-    font-weight:300;
 }
 
 section {
@@ -140,7 +126,7 @@ section {
 
 .reference-type {
     display: inline-block;
-    width: 30%;
+    width: 33%;
     height: 250px;
     border: 1px solid gray;
     border-radius: 15px;
@@ -157,9 +143,9 @@ section {
 }
 
 .index-container {
-    display: block;
+    display: flex;
     width: 100%;
-    margin: 0 auto;
+    justify-content: space-around;
 }
 
 .reference-type:hover {
